--- a/src/Esw.UnitTest.Common.Analyzers/Diagnostic.nuspec
+++ b/src/Esw.UnitTest.Common.Analyzers/Diagnostic.nuspec
@@ -6,12 +6,12 @@
     <title>Esw.UnitTest.Common.Analyzers</title>
     <authors>David Rodrigues</authors>
     <owners>eShopWorld</owners>
-    <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
-    <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
-    <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
+    <licenseUrl>https://github.com/eShopWorld/Esw.UnitTest.Common/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/eShopWorld/Esw.UnitTest.Common</projectUrl>
+    <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Common entry point for any unit test assembly in eShopWorld.</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
+    <releaseNotes>initial release of the package.</releaseNotes>
     <copyright>eShopWorld</copyright>
     <tags>Esw.UnitTest.Common.Analyzers, analyzers, unit test, unittest</tags>
     <frameworkAssemblies>
