--- a/src/Esw.UnitTest.Common.Analyzers/Esw.UnitTest.Common.Analyzers.csproj
+++ b/src/Esw.UnitTest.Common.Analyzers/Esw.UnitTest.Common.Analyzers.csproj
@@ -32,14 +32,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="CodeFixProvider.cs" />
-    <Compile Include="EnsureXUnitAnalyzer.cs" />
+    <Compile Include="EnsurexUnitCodeFixProvider.cs" />
+    <Compile Include="EnsurexUnitAnalyzer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="WrongTestFrameworkVisitor.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources.resx">
