Added a Is* analyzer for tests.

--- a/src/AnalyzerDebug/Debug/Debug.csproj
+++ b/src/AnalyzerDebug/Debug/Debug.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Esw.UnitTest.Common">
+      <HintPath>..\..\Esw.UnitTests.Common\bin\Esw.UnitTest.Common.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\xunit.abstractions.2.0.0\lib\net35\xunit.abstractions.dll</HintPath>
