Added an IsIntegration attribute and renamed visitors and rewriters to make it more simple to navigate with R#.

--- a/src/Esw.UnitTest.Common.Analyzers/Esw.UnitTest.Common.Analyzers.csproj
+++ b/src/Esw.UnitTest.Common.Analyzers/Esw.UnitTest.Common.Analyzers.csproj
@@ -41,9 +41,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="WrongTestFrameworkRewriter.cs" />
-    <Compile Include="WrongIsTestVisitor.cs" />
-    <Compile Include="WrongTestFrameworkVisitor.cs" />
+    <Compile Include="TestFrameworkRewriter.cs" />
+    <Compile Include="IsTestVisitor.cs" />
+    <Compile Include="TestFrameworkVisitor.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources.resx">
