--- a/src/Esw.UnitTest.Common.Analyzers/Esw.UnitTest.Common.Analyzers.csproj
+++ b/src/Esw.UnitTest.Common.Analyzers/Esw.UnitTest.Common.Analyzers.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="EnsureIsTestAnalyzer.cs" />
+    <Compile Include="EnsureIsTestCodeFixProvider.cs" />
     <Compile Include="EnsurexUnitCodeFixProvider.cs" />
     <Compile Include="EnsurexUnitAnalyzer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -41,6 +42,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="IsTestRewriter.cs" />
     <Compile Include="TestFrameworkRewriter.cs" />
     <Compile Include="IsTestVisitor.cs" />
     <Compile Include="TestFrameworkVisitor.cs" />
