--- a/src/DevOpsFlex.Tests.Core.Analyzers.Vsix/DevOpsFlex.Tests.Core.Analyzers.Vsix.csproj
+++ b/src/DevOpsFlex.Tests.Core.Analyzers.Vsix/DevOpsFlex.Tests.Core.Analyzers.Vsix.csproj
@@ -53,9 +53,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Esw.UnitTest.Common.Analyzers\Esw.UnitTest.Common.Analyzers.csproj">
+    <ProjectReference Include="..\DevOpsFlex.Tests.Core.Analyzers\DevOpsFlex.Tests.Core.Analyzers.csproj">
       <Project>{ED355FCA-65CF-4207-8429-96A4C53AB74C}</Project>
-      <Name>Esw.UnitTest.Common.Analyzers</Name>
+      <Name>DevOpsFlex.Tests.Core.Analyzers</Name>
+      <IncludeOutputGroupsInVSIX>BuiltProjectOutputGroup%3bBuiltProjectOutputGroupDependencies%3bGetCopyToOutputDirectoryItems%3bSatelliteDllsProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
+      <IncludeOutputGroupsInVSIXLocalOnly>DebugSymbolsProjectOutputGroup%3b</IncludeOutputGroupsInVSIXLocalOnly>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
