Aligned all the namespaces to the new rename and changed package names and ids.

--- a/src/DevOpsFlex.Tests.Core.Analyzers/DevOpsFlex.Tests.Core.Analyzers.csproj
+++ b/src/DevOpsFlex.Tests.Core.Analyzers/DevOpsFlex.Tests.Core.Analyzers.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{ED355FCA-65CF-4207-8429-96A4C53AB74C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Esw.UnitTest.Common.Analyzers</RootNamespace>
-    <AssemblyName>Esw.UnitTest.Common.Analyzers</AssemblyName>
+    <RootNamespace>DevOpsFlex.Tests.Core.Analyzers</RootNamespace>
+    <AssemblyName>DevOpsFlex.Tests.Core.Analyzers</AssemblyName>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkProfile>Profile7</TargetFrameworkProfile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -54,7 +54,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Esw.UnitTest.Common.Analyzers.nuspec">
+    <None Include="DevOpsFlex.Tests.Core.Analyzers.nuspec">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -117,19 +117,4 @@
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\v4.6\Microsoft.Portable.CSharp.targets" />
-  <Target Name="AfterBuild">
-    <GetAssemblyIdentity AssemblyFiles="$(OutDir)\$(AssemblyName).dll">
-      <Output TaskParameter="Assemblies" ItemName="AnalyzerAssemblyInfo" />
-    </GetAssemblyIdentity>
-    <Exec Command="&quot;$(SolutionDir)..\packages\NuGet.CommandLine.2.8.5\tools\NuGet.exe&quot; pack Esw.UnitTest.Common.Analyzers.nuspec -NoPackageAnalysis -Version %(AnalyzerAssemblyInfo.Version) -OutputDirectory ." WorkingDirectory="$(OutDir)" LogStandardErrorAsError="true" ConsoleToMSBuild="true">
-      <Output TaskParameter="ConsoleOutput" PropertyName="OutputOfExec" />
-    </Exec>
-  </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
