--- a/src/DevOpsFlex.Tests.Core/DevOpsFlex.Tests.Core.nuspec
+++ b/src/DevOpsFlex.Tests.Core/DevOpsFlex.Tests.Core.nuspec
@@ -3,6 +3,7 @@
   <metadata>
     <id>DevOpsFlex.Tests.Core</id>
     <version>1.0.0</version>
+    <title>DevOpsFlex.Tests.Core</title>
     <authors>David Rodrigues</authors>
     <owners>eShopWorld</owners>
     <licenseUrl>https://github.com/eShopWorld/Esw.UnitTest.Common/blob/master/LICENSE</licenseUrl>
@@ -14,9 +15,9 @@
     <copyright>Copyright 2016</copyright>
     <tags>Test, Unit Test, xUnit, Moq, FluentAssertions</tags>
     <dependencies>
-      <dependency id="Esw.UnitTest.Common.Analyzers" version="[0.1,)" />
-      <dependency id="FluentAssertions" version="[4.13.0,)" />
-      <dependency id="Moq" version="[4.5.21,)" />
+      <dependency id="DevOpsFlex.Tests.Core.Analyzers" version="[1.0.0,)" />
+      <dependency id="FluentAssertions" version="[4.17.0,)" />
+      <dependency id="Moq" version="[4.5.28,)" />
       <dependency id="xunit" version="[2.1.0,)" />
     </dependencies>
   </metadata>
