--- a/src/DevOpsFlex.Tests.Core/DevOpsFlex.Tests.Core.nuspec
+++ b/src/DevOpsFlex.Tests.Core/DevOpsFlex.Tests.Core.nuspec
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package >
+<package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>DevOpsFlex.Tests.Core</id>
     <version>1.0.0</version>
