--- a/src/DevOpsFlex.Tests.Core.Analyzers.Vsix/DevOpsFlex.Tests.Core.Analyzers.Vsix.csproj
+++ b/src/DevOpsFlex.Tests.Core.Analyzers.Vsix/DevOpsFlex.Tests.Core.Analyzers.Vsix.csproj
@@ -33,6 +33,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CreateVsixContainer>True</CreateVsixContainer>
+    <NoWarn>2008</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
