--- a/src/DevOpsFlex.Tests.Core/DevOpsFlex.Tests.Core.csproj
+++ b/src/DevOpsFlex.Tests.Core/DevOpsFlex.Tests.Core.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DevOpsFlex.Tests.Core</RootNamespace>
     <AssemblyName>DevOpsFlex.Tests.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
@@ -93,9 +93,7 @@
     <None Include="DevOpsFlex.Tests.Core.nuspec">
       <SubType>Designer</SubType>
     </None>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
