--- a/src/DevOpsFlex.Tests.Core/DevOpsFlex.Tests.Core.csproj
+++ b/src/DevOpsFlex.Tests.Core/DevOpsFlex.Tests.Core.csproj
@@ -85,6 +85,10 @@
   <ItemGroup>
     <Compile Include="EnumExtensions.cs" />
     <Compile Include="FluentAssertionExtensions.cs" />
+    <Compile Include="Lorem\EnumerableExtensions.cs" />
+    <Compile Include="Lorem\Lorem.cs" />
+    <Compile Include="Lorem\NumberExtensions.cs" />
+    <Compile Include="Lorem\StringExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestResource.cs" />
     <Compile Include="xUnitTraitExtensions.cs" />
