--- a/src/DevOpsFlex.Tests.Core/DevOpsFlex.Tests.Core.nuspec
+++ b/src/DevOpsFlex.Tests.Core/DevOpsFlex.Tests.Core.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>DevOpsFlex.Tests.Core</id>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
     <title>DevOpsFlex.Tests.Core</title>
     <authors>David Rodrigues</authors>
     <owners>eShopWorld</owners>
@@ -19,6 +19,7 @@
       <dependency id="FluentAssertions" version="[4.18.0,)" />
       <dependency id="Moq" version="[4.5.29,)" />
       <dependency id="xunit" version="[2.1.0,)" />
+      <dependency id="xunit.runner.visualstudio" version="[2.1.0,)" />
     </dependencies>
   </metadata>
 </package>
