--- a/src/Tests/DevOpsFlex.Tests.Core.Tests/packages.config
+++ b/src/Tests/DevOpsFlex.Tests.Core.Tests/packages.config
@@ -2,12 +2,12 @@
 <packages>
   <package id="Castle.Core" version="4.0.0" targetFramework="net462" />
   <package id="FluentAssertions" version="4.19.2" targetFramework="net462" />
-  <package id="Moq" version="4.7.1" targetFramework="net462" />
+  <package id="Moq" version="4.7.10" targetFramework="net462" />
   <package id="xunit" version="2.2.0" targetFramework="net462" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net462" />
   <package id="xunit.assert" version="2.2.0" targetFramework="net462" />
   <package id="xunit.core" version="2.2.0" targetFramework="net462" />
   <package id="xunit.extensibility.core" version="2.2.0" targetFramework="net462" />
   <package id="xunit.extensibility.execution" version="2.2.0" targetFramework="net462" />
-  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net462" />
+  <package id="xunit.runner.visualstudio" version="2.2.0" targetFramework="net462" developmentDependency="true" />
 </packages>
