--- a/src/DevOpsFlex.Tests.Core/DevOpsFlex.Tests.Core.csproj
+++ b/src/DevOpsFlex.Tests.Core/DevOpsFlex.Tests.Core.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>DevOpsFlex.Tests.Core</PackageId>
-    <Version>1.1.0</Version>
+    <Version>1.1.1</Version>
     <Authors>David Rodrigues</Authors>
     <Company>eShopWorld</Company>
     <Product>DevOpsFlex.Tests.Core</Product>
@@ -27,7 +27,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="Moq" Version="4.7.142" />
     <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.console" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
 
 </Project>
