--- a/src/Eshopworld.Tests.Core.Analyzers.Vsix/Eshopworld.Tests.Core.Analyzers.Vsix.csproj
+++ b/src/Eshopworld.Tests.Core.Analyzers.Vsix/Eshopworld.Tests.Core.Analyzers.Vsix.csproj
@@ -60,9 +60,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DevOpsFlex.Tests.Core.Analyzers\DevOpsFlex.Tests.Core.Analyzers.csproj">
+    <ProjectReference Include="..\Eshopworld.Tests.Core.Analyzers\Eshopworld.Tests.Core.Analyzers.csproj">
       <Project>{ED355FCA-65CF-4207-8429-96A4C53AB74C}</Project>
-      <Name>DevOpsFlex.Tests.Core.Analyzers</Name>
+      <Name>Eshopworld.Tests.Core.Analyzers</Name>
       <IncludeOutputGroupsInVSIX>BuiltProjectOutputGroup%3bBuiltProjectOutputGroupDependencies%3bGetCopyToOutputDirectoryItems%3bSatelliteDllsProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
       <IncludeOutputGroupsInVSIXLocalOnly>DebugSymbolsProjectOutputGroup%3b</IncludeOutputGroupsInVSIXLocalOnly>
     </ProjectReference>
