--- a/src/Eshopworld.Tests.Core.Analyzers/Eshopworld.Tests.Core.Analyzers.nuspec
+++ b/src/Eshopworld.Tests.Core.Analyzers/Eshopworld.Tests.Core.Analyzers.nuspec
@@ -1,19 +1,19 @@
 ﻿<?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <id>DevOpsFlex.Tests.Core.Analyzers</id>
-    <version>1.1.0</version>
-    <title>DevOpsFlex.Tests.Core.Analyzers</title>
+    <id>Eshopworld.Tests.Core.Analyzers</id>
+    <version>1.0.0</version>
+    <title>Eshopworld.Tests.Core.Analyzers</title>
     <authors>David Rodrigues</authors>
     <owners>eShopWorld</owners>
-    <licenseUrl>https://github.com/eShopWorld/Esw.UnitTest.Common/blob/master/LICENSE</licenseUrl>
-    <projectUrl>https://github.com/eShopWorld/Esw.UnitTest.Common</projectUrl>
+    <projectUrl>https://github.com/eShopWorld/tests-core</projectUrl>
+    <licenseUrl>https://github.com/eShopWorld/tests-core/blob/master/LICENSE</licenseUrl>
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Common entry point for any unit test assembly in eShopWorld.</description>
     <releaseNotes>initial release of the package.</releaseNotes>
     <copyright>eShopWorld</copyright>
-    <tags>devopsflex, analyzers, unit test, unittest</tags>
+    <tags>eshopworld, analyzers, unit test, unittest, test</tags>
     <frameworkAssemblies>
       <frameworkAssembly assemblyName="System" targetFramework="" />
     </frameworkAssemblies>
