--- a/src/Eshopworld.Tests.Core.Analyzers/Eshopworld.Tests.Core.Analyzers.csproj
+++ b/src/Eshopworld.Tests.Core.Analyzers/Eshopworld.Tests.Core.Analyzers.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{ED355FCA-65CF-4207-8429-96A4C53AB74C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DevOpsFlex.Tests.Core.Analyzers</RootNamespace>
-    <AssemblyName>DevOpsFlex.Tests.Core.Analyzers</AssemblyName>
+    <RootNamespace>Eshopworld.Tests.Core.Analyzers</RootNamespace>
+    <AssemblyName>Eshopworld.Tests.Core.Analyzers</AssemblyName>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkProfile>Profile7</TargetFrameworkProfile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
