--- a/src/Tests/Eshopworld.Tests.Core.Analyzers.Test/Eshopworld.Tests.Core.Analyzers.Test.csproj
+++ b/src/Tests/Eshopworld.Tests.Core.Analyzers.Test/Eshopworld.Tests.Core.Analyzers.Test.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{62938EBD-F83A-4F9C-8BA6-6A08E7FDAFE6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DevOpsFlex.Tests.Core.Analyzers.Test</RootNamespace>
-    <AssemblyName>DevOpsFlex.Tests.Core.Analyzers.Test</AssemblyName>
+    <RootNamespace>Eshopworld.Tests.Core.Analyzers.Test</RootNamespace>
+    <AssemblyName>Eshopworld.Tests.Core.Analyzers.Test</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
