--- a/src/Tests/Eshopworld.Tests.Core.Tests/Eshopworld.Tests.Core.Tests.csproj
+++ b/src/Tests/Eshopworld.Tests.Core.Tests/Eshopworld.Tests.Core.Tests.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{BDF6C28D-8A87-4EF8-BEC4-83E9D306A08F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DevOpsFlex.Tests.Core.Tests</RootNamespace>
-    <AssemblyName>DevOpsFlex.Tests.Core.Tests</AssemblyName>
+    <RootNamespace>Eshopworld.Tests.Core.Tests</RootNamespace>
+    <AssemblyName>Eshopworld.Tests.Core.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
