nuget config ammended

--- a/src/nuget.config
+++ b/src/nuget.config
@@ -3,4 +3,9 @@
   <config>
     <add key="repositoryPath" value="..\packages" />
   </config>
+ <packageSources>
+    <add key="myget1" value="https://eshopworld.myget.org/F/github-dev/api/v3/index.json" />
+    <add key="myget2" value="https://eshopworld.myget.org/F/nuget-dev/api/v3/index.json" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+  </packageSources>
 </configuration>
