Updated <PackageReleaseNotes> tag with info about the change

--- a/src/Eshopworld.Tests.Core/Eshopworld.Tests.Core.csproj
+++ b/src/Eshopworld.Tests.Core/Eshopworld.Tests.Core.csproj
@@ -5,7 +5,7 @@
     <IsPackable>true</IsPackable>
 
     <Version>2.0.4</Version>
-    <PackageReleaseNotes>Upgrade to netstandard2.1</PackageReleaseNotes>
+    <PackageReleaseNotes>Updated xUnit trait attribute to be applicable at class level.</PackageReleaseNotes>
 
     <PackageId>Eshopworld.Tests.Core</PackageId>
     <Authors>David Rodrigues, Oisin Haken</Authors>
@@ -19,7 +19,6 @@
     <AssemblyName>Eshopworld.Tests.Core</AssemblyName>
     <RootNamespace>Eshopworld.Tests.Core</RootNamespace>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Updated to use latest analyzer package</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
