--- a/src/Eshopworld.Tests.Core.Analyzers/Eshopworld.Tests.Core.Analyzers.nuspec
+++ b/src/Eshopworld.Tests.Core.Analyzers/Eshopworld.Tests.Core.Analyzers.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>Eshopworld.Tests.Core.Analyzers</id>
-    <version>1.0.10-preview.1</version>
+    <version>1.0.10</version>
     <title>Eshopworld.Tests.Core.Analyzers</title>
     <authors>David Rodrigues, Oisin Haken</authors>
     <owners>eShopWorld</owners>
